--- a/01/bootload/Makefile
+++ b/01/bootload/Makefile
@@ -13,7 +13,8 @@ OBJDUMP	= $(BINDER)/$(ADDNAME)objdump
 RANLIB	= $(BINDER)/$(ADDNAME)ranlib
 STRIP 	= $(BINDER)/$(ADDNAME)strip
 
-H8WRITE = ../../tools/h8write/h8write
+# H8WRITE = ../../tools/h8write/h8write
+H8WRITE = ../../tools/kz_h8write
 
 H8WRITE_SERDEV = /dev/serial/by-id/usb-FTDI_USB_HS_SERIAL_CONVERTER_FT1S8XCY-if00-port0
 
