--- a/01/bootload/Makefile
+++ b/01/bootload/Makefile
@@ -14,9 +14,9 @@ RANLIB	= $(BINDER)/$(ADDNAME)ranlib
 STRIP 	= $(BINDER)/$(ADDNAME)strip
 
 # H8WRITE = ../../tools/h8write/h8write
-H8WRITE = ../../tools/kz_h8write
+H8WRITE = ../../tools/kz_h8write/kz_h8write
 
-H8WRITE_SERDEV = /dev/serial/by-id/usb-FTDI_USB_HS_SERIAL_CONVERTER_FT1S8XCY-if00-port0
+H8WRITE_SERDEV = /dev/serial/by-id/usb-FTDI_USB_HS_SERIAL_CONVERTER_FTSDR71M-if00-port0
 
 OBJS = vector.o startup.o main.o
 OBJS += lib.o serial.o
