--- a/01/bootload/Makefile
+++ b/01/bootload/Makefile
@@ -19,7 +19,7 @@ H8WRITE = ../../tools/kz_h8write/kz_h8write
 H8WRITE_SERDEV = /dev/serial/by-id/usb-FTDI_USB_HS_SERIAL_CONVERTER_FTSDR71M-if00-port0
 
 OBJS = vector.o startup.o main.o
-OBJS += lib.o serial.o xmodem.o
+OBJS += lib.o serial.o xmodem.o elf.o
 
 TARGET = kzload
 
