--- a/01/os/Makefile
+++ b/01/os/Makefile
@@ -14,7 +14,7 @@ RANLIB = $(BINDER)/$(ADDNAME)ranlib
 STRIP = $(BINDER)/$(ADDNAME)strip
 
 
-OBJS = startup.o main.o
+OBJS = startup.o main.o interrupt.o
 OBJS += lib.o serial.o
 
 TARGET = kozos
@@ -30,6 +30,7 @@ LFLAGS = -static -T ld.scr -L.
 
 .SUFFIXES: .c .o
 .SUFFIXES: .s .o
+.SUFFIXES: .S .o
 
 all :	$(TARGET)
 
@@ -42,6 +43,9 @@ $(TARGET) :	$(OBJS)
 		$(CC) -c $(CFLAGS) $<
 
 .s.o :		$<
+		$(CC) -c $(CFLAGS) $<
+
+.S.o :		$<
 		$(CC) -c $(CFLAGS) $<
 
 clean : 
